Cleaning up imports and other small bugs